[package]
name = "beckeros"
version = "0.1.0"
authors = ["Carlos Alexandro Becker <caarlos0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# we don't want stack unwinding as it requires OS specifics
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
